--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ html {
 
 body {
   /* border: 1px solid blue; */
-  padding: 0;
+  padding: 0 0 30px 0;
   margin: 0;
   /* width: 85%; */
   width: 1100px;
