--- a/style.css
+++ b/style.css
@@ -1295,12 +1295,156 @@ main.profile {
 }
 
 section.main {
-  border: 1px solid #6b7280;
+  /* border: 1px solid #6b7280; */
   display: flex;
   flex-flow: column;
   align-items: start;
   gap: 0;
   width: 63%;
+}
+
+
+section.main > .head {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  gap: 0;
+  width: 100%;
+}
+
+section.main > .head * {
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+}
+section.main > .head > .data {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: column;
+  gap: 0px;
+}
+
+section.main > .head > .data > .name {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
+
+section.main > .head > .data > .name > p {
+  /* border: 1px solid #6b7280; */
+  margin: 0;
+  padding: 0;
+  color: var(--text-color);
+  font-family: var(--font-text);
+  font-weight: 500;
+  line-height: 1.4;
+  font-size: 1.2rem;
+}
+
+section.main > .head > .data > .name > .user {
+  /* border: 1px solid #6b7280; */
+  margin: 0 0 10px 0;
+  padding: 0;
+  color: var(--gray-color);
+  font-family: var(--font-text), sans-serif;
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 1rem;
+  display: flex;
+  font-family: var(--font-mono), monospace;
+  align-items: start;
+  flex-flow: column;
+  gap: 0;
+}
+
+section.main > .head > .data > .name > .user > span.code {
+  /* border: 1px solid #6b7280; */
+  margin: 0 0;
+  padding: 0;
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-family: var(--font-mono), monospace;
+  font-weight: 400;
+}
+
+section.main > .head > .data > .name > .user > span.joined {
+  font-size: 0.9rem;
+  font-family: var(--font-text), sans-serif;
+}
+
+section.main > .head > .data > .users {
+  /* border: 1px solid #6b7280; */
+  margin: 0;
+  padding: 0;
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+section.main > .head > .data > .users > a {
+  text-decoration: none;
+  color: inherit;
+}
+
+section.main > .head > .data > .users > a:hover {
+  color: var(--accent-color);
+}
+
+section.main > .head > .data > .users > a > span.no {
+  font-family: var(--font-mono), monospace;
+  font-size: 0.9rem;
+}
+
+section.main > .head > .image {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90px;
+  height: 90px;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+section.main > .head > .image > img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+section.main > p.about {
+  /* border: 1px solid #6b7280; */
+  margin: 15px 0;
+  padding: 0;
+  color: var(--text-color);
+  font-family: var(--font-text);
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 1rem;
 }
 
 
