--- a/style.css
+++ b/style.css
@@ -701,6 +701,7 @@ main.main > article.content .head > .topic {
   /* border: 1px solid #000000; */
   width: max-content;
   color: var(--white-color);
+  margin: 0 0 5px;
   padding: 3px 10px 4px 10px;
   box-shadow: 0 0 0 1px #ffffff25, 0 2px 2px #0000000a, 0 8px 16px -4px #0000000a;
   background: var(--accent-linear);
@@ -735,11 +736,13 @@ main.main > article.content .head > span.stats span.dot {
 }
 
 main.main > article.content > #content.content {
+  /* border: 1px solid #000000; */
+  margin: 10px 0 0 0;
   display: flex;
   flex-flow: column;
   color: var(--read-color);
   font-family: var(--font-read), sans-serif;
-  gap: 20px;
+  gap: 0;
   font-size: 1rem;
   font-weight: 400;
 }
@@ -826,6 +829,14 @@ main.main > article.content > #content.content * {
   -moz-transition: all 300ms ease-in-out;
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
+}
+main.main > article.content > #content.content .intro {
+  /* border: 1px solid #000000; */
+  margin: 0;
+}
+main.main > article.content > #content.content .paragraph {
+  /* border: 1px solid #000000; */
+  margin: 20px 0 0 0;
 }
 
 main.main > article.content > #content.content h2.title {
